frontend/shared/scss/components/icons.scss
@use '../base/variables' as *;
@use '../base/text-styles';


.icon-base {

    &:before {
        line-height: 1;
        font-size: 24px;
        vertical-align: middle !important;
        font-family: st-icons !important;
        font-style: normal;
        font-weight: normal !important;
    }
}


.icon {
    width: 24px;
    font-size: 24px;
    box-sizing: content-box;
    overflow: hidden;
    white-space: nowrap;
    flex-shrink: 0;
    
    display: inline; // fallback
    display: inline-flex; // needed for proper vertical alignemnt of icons
    vertical-align: middle;
    align-items: center;
    position: relative;

    &.text-size {
        font-size: inherit;
        width: unset;
        height: unset;

        &:before {
            font-size: inherit;
        }
    }

    &.small, .button.text &, .button.primary &, .button.secundary & {
        width: 20px;
        height: 20px;
        font-size: 20px;

        &:before {
            font-size: 20px;
        }
    }

    &.tiny {
        width: 16px;
        height: 16px;
        font-size: 16px;

        &:before {
            font-size: 16px;
        }
    }

    &.rot {
        &:before {
            transition: transform 0.2s;
        }

        &.rot90:before {
            transform: rotate(-90deg);
        }

        &.rot180:before {
            transform: rotate(-180deg);
        }
    }

    &.stroke {
        &:before {
            position: absolute;
        }
        &:after {
            color: $color-background;
            color: var(--color-current-background, #{$color-background});
            -webkit-text-stroke: 5px $color-background;
            -webkit-text-stroke: 5px var(--color-current-background, #{$color-background});
            z-index: -1;            
        }
    }

    &.layered {
        display: inline-grid;
        grid-template-columns: 1fr;
        grid-template-rows: 1fr;

        > .icon {
            grid-column: 1 / 1;
            grid-row: 1 / 1;
        }
    }
    
    &.light-gray {
        color: $color-gray-2;
    }

    &.gray {
        color: $color-gray-4;
    }

    .button &.gray {
        color: $color-gray-4;
    }

    &.primary-light {
        color: $color-primary-gray-light;
    }

    &.green {
        color: $color-success;
    }

    &.stripe {
        color: #635BFF;
    }

    &.red {
        color: $color-error;
    }

    &.blue {
        color: $color-primary-original;
    }

    &.pink {
        color: $color-tertiary;
    }

    &.primary {
        color: $color-primary;
    }

    &.yellow {
        color: $color-warning;
    }

    &.secundary {
        color: $color-secundary;
    }

    &.tertiary {
        color: $color-tertiary;
    }

    &.color-word {
        color: #0023DB;
    }

    &.color-excel {
        color: #1D7200;
    }

    &.color-pdf {
        color: #EE0000;
    }

    &.custom-color, .button &.custom-color {
        color: var(--color);
    }

    &.middle {
        vertical-align: middle;
    }

    &:before {
        line-height: 1;
        font-size: 24px;
        font-family: st-icons !important;
        font-style: normal;
        font-weight: normal !important;
        vertical-align: middle !important;

        -webkit-font-smoothing: antialiased;
        -moz-osx-font-smoothing: grayscale;
        text-rendering: optimizelegibility;
    }
}

